welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:6: error: type mismatch;
 found   : Unit
 required: Int
		x=10
                 ^blueTicket:9: error: type mismatch;
 found   : Unit
 required: Int
		for (y<- 1 to 2) {
                      ^